--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "tsc": "tsc",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/react": "^19.0.10",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0"
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "react": "^19.0.0"
   }
 }
